<resources>
    <string name="app_name">On Board Unit</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="start_travel">Start travel</string>
    <string name="stop_travel">Stop travel</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="check_payments">Check My payments</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_username">Username*</string>s
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_create_account">or create account</string>
    <string name="button">Button</string>
    <string name="wallet_iota">IOTA Wallet Image</string>
    <string name="wallet_identity">Identity Wallet Image</string>
    <string name="settings">Settings</string>
    <string name="required_fields">* required fields</string>
    <string name="create_identity_wallet2">Create your Identity wallet</string>
    <string name="identity_wallet">Identity Wallet</string>
    <string name="create_iota_wallet2">Create your IOTA wallet</string>
    <string name="car_btn">car_btn</string>
    <string name="payments_btn">payments_btn</string>
    <string name="config_btn">config_btn</string>
    <string name="create_account">Create Account</string>
    <string name="app_title">MyOBU</string>
    <string name="bootstrapbutton">BootstrapButton</string>
    <string name="travel">Travel</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="account_settings">Account Settings</string>
    <string name="manage_iota_wallet">Manage IOTA wallet</string>
    <string name="manage_identity_wallet">Manage identity wallet</string>
    <string name="test1">primary</string>
    <string name="loading_please_wait">Loading... Please wait</string>
    <string name="title_activity_payments_list">payments_list</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="pay">Pay</string>
    <string name="complain">Complain</string>
    <string name="number">#</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="amount_miota">Amount (MIOTA)</string>
    <string name="status">Status</string>
    <string name="select">Select</string>
    <string name="helloworld">helloworld</string>
    <string name="change_password">Change Password</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="messages">Messages</string>
    <string name="my_credentials">My Credentials</string>
    <string name="balance">Balance</string>
    <string name="view_addresses">View Addresses</string>
    <string name="change_account_name">Change Account Name</string>
</resources>