<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*
">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/table"
        android:weightSum="9">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/number"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/time"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/amount_miota"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/select"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </TableRow>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="450dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="80dp" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@id/listView">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_pay"
                android:layout_width="129dp"
                android:layout_height="49dp"
                android:onClick="onClick_pay"
                android:text="@string/pay"
                android:layout_marginStart="50dp"
                android:textAlignment="center"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btn_complain"
                android:layout_width="130dp"
                android:layout_height="49dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="50dp"
                android:layout_toEndOf="@+id/btn_pay"
                android:text="@string/complain"
                android:textAlignment="center"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
