<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/messages_indy"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:gravity="center_horizontal"
        android:text="@string/messages"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/change_password_indy"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/change_password"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credentials"
        app:layout_constraintVertical_bias="0.215"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/credentials"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/my_credentials"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance_indy"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/balance_indy"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:gravity="center_horizontal"
        android:text="@string/balance"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messages_indy"
        app:roundedCorners="true"
        app:showOutline="false" />


</androidx.constraintlayout.widget.ConstraintLayout>