<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_start_travel"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:drawableLeft="@drawable/car"
        android:onClick="onClick_startTravel"
        android:text="@string/travel"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.288"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_check_payments"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:drawableStart="@drawable/fee"
        android:onClick="onClick_checkPayments"
        android:text="@string/check_payments"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toTopOf="@+id/btn_config"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_travel"
        app:layout_constraintVertical_bias="0.512"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_config"
        android:layout_width="339dp"
        android:layout_height="76dp"
        android:drawableStart="@drawable/config"
        android:onClick="onClick_settings"
        android:text="@string/settings"
        android:textAlignment="center"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        app:roundedCorners="true"
        app:showOutline="false" />


</androidx.constraintlayout.widget.ConstraintLayout>